Add Implementation section

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -151,3 +151,11 @@
   year = {2024},
   month = {4},
 }
+
+@unpublished{ipywidgets,
+  author = {Jupyter widgets community},
+  title = {ipywidgets, a GitHub repository},
+  year = {2015},
+  note = {Retrieved from https://github.com/jupyter-widgets/ipywidgets}
+  accessdate = {2024-04-01}
+}
