--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -152,7 +152,7 @@
   month = {4},
 }
 
-@unpublished{ipywidgets,
+@misc{ipywidgets,
   author = {Jupyter widgets community},
   title = {ipywidgets, a GitHub repository},
   year = {2015},
