--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -156,6 +156,5 @@
   author = {Jupyter widgets community},
   title = {ipywidgets, a GitHub repository},
   year = {2015},
-  note = {Retrieved from https://github.com/jupyter-widgets/ipywidgets}
-  accessdate = {2024-05-28}
+  url = {https://github.com/jupyter-widgets/ipywidgets}
 }
