Add implementation section (#126)
* Add Implementation section

* Trevor edits

* update access date

* Update paper.md

Co-authored-by: Trevor Manz <trevor.j.manz@gmail.com>

* Update paper/refs.bib

* Update paper/refs.bib

---------

Co-authored-by: Fritz Lekschas <code@lekschas.de>

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -151,3 +151,10 @@
   year = {2024},
   month = {4},
 }
+
+@misc{ipywidgets,
+  author = {Jupyter widgets community},
+  title = {ipywidgets, a GitHub repository},
+  year = {2015},
+  url = {https://github.com/jupyter-widgets/ipywidgets}
+}
