Add paper figures

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -23,6 +23,74 @@
   year = 2007
 }
 
+@article{dekker2023spatial,
+  title={Spatial and temporal organization of the genome: Current state and future aims of the 4D nucleome project},
+  author={Dekker, Job and Alber, Frank and Aufmkolk, Sarah and Beliveau, Brian J and Bruneau, Benoit G and Belmont, Andrew S and Bintu, Lacramioara and Boettiger, Alistair and Calandrelli, Riccardo and Disteche, Christine M and others},
+  journal={Molecular cell},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{kerpedjiev2018higlass,
+  title={HiGlass: web-based visual exploration and analysis of genome interaction maps},
+  author={Kerpedjiev, Peter and Abdennur, Nezar and Lekschas, Fritz and McCallum, Chuck and Dinkla, Kasper and Strobelt, Hendrik and Luber, Jacob M and Ouellette, Scott B and Azhir, Alaleh and Kumar, Nikhil and others},
+  journal={Genome biology},
+  volume={19},
+  pages={1--12},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{mair2022extricating,
+  title={Extricating human tumour immune alterations from tissue inflammation},
+  author={Mair, Florian and Erickson, Jami R and Frutoso, Marie and Konecny, Andrew J and Greene, Evan and Voillet, Valentin and Maurice, Nicholas J and Rongvaux, Anthony and Dixon, Douglas and Barber, Brittany and others},
+  journal={Nature},
+  volume={605},
+  number={7911},
+  pages={728--735},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{Ω,
+  title={New interpretable machine-learning method for single-cell data reveals correlates of clinical response to cancer immunotherapy},
+  author={Greene, Evan and Finak, Greg and D'Amico, Leonard A and Bhardwaj, Nina and Church, Candice D and Morishima, Chihiro and Ramchurren, Nirasha and Taube, Janis M and Nghiem, Paul T and Cheever, Martin A and others},
+  journal={Patterns},
+  volume={2},
+  number={12},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@software{greene2022data,
+author = {Greene, Evan and Finak, Greg and Lekschas, Fritz and Smith, Malisa and D'Amico, Leonard A and Bhardwaj, Nina and Church, Candice D and Morishima, Chihiro and Ramchurren, Nirasha and Taube, Janis M and Nghiem, Paul T and Cheever, Martin A and Fling, Steven P and Gottardo, Raphael},
+doi = {10.5281/zenodo.7522322},
+license = {Apache-2.0},
+month = jul,
+title = {{Data Transformations for Effective Visualization of Single-Cell Embeddings}},
+url = {https://github.com/flekschas-ozette/ismb-biovis-2022},
+version = {1.0.0},
+year = {2022}
+}
+
+@article{spracklin2023diverse,
+  title={Diverse silent chromatin states modulate genome compartmentalization and loop extrusion barriers},
+  author={Spracklin, George and Abdennur, Nezar and Imakaev, Maxim and Chowdhury, Neil and Pradhan, Sriharsa and Mirny, Leonid A and Dekker, Job},
+  journal={Nature structural \& molecular biology},
+  volume={30},
+  number={1},
+  pages={38--51},
+  year={2023},
+  publisher={Nature Publishing Group US New York}
+}
+
+@article{misra2022news,
+  title={News category dataset},
+  author={Misra, Rishabh},
+  journal={arXiv preprint arXiv:2209.11429},
+  year={2022}
+}
+
 @InProceedings{mckinney2010data,
   author = {{W}es {M}c{K}inney},
   title = {{D}ata {S}tructures for {S}tatistical {C}omputing in {P}ython},
