Fix ipywidgets ref

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -222,7 +222,7 @@ year = {2022}
 
 @misc{ipywidgets,
   author = {Jupyter widgets community},
-  title = {ipywidgets, a GitHub repository},
+  title = {ipywidgets: Interactive Widgets for the Jupyter Notebook},
   year = {2015},
   url = {https://github.com/jupyter-widgets/ipywidgets}
 }
