Fix team authors

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -52,7 +52,7 @@
   publisher={Nature Publishing Group UK London}
 }
 
-@article{Ω,
+@article{greene2021new,
   title={New interpretable machine-learning method for single-cell data reveals correlates of clinical response to cancer immunotherapy},
   author={Greene, Evan and Finak, Greg and D'Amico, Leonard A and Bhardwaj, Nina and Church, Candice D and Morishima, Chihiro and Ramchurren, Nirasha and Taube, Janis M and Nghiem, Paul T and Cheever, Martin A and others},
   journal={Patterns},
@@ -176,20 +176,20 @@ year = {2022}
 
 @misc{bokeh,
   title = {Bokeh: Python library for interactive visualization},
-  author = {{Bokeh Development Team}},
+  author = {{Bokeh development team}},
   year = {2018},
   url = {https://bokeh.pydata.org/en/latest/},
 }
 
 @misc{datashader,
-  author = {Anaconda developers and community contributors},
+  author = {{Anaconda developers and community contributors},
   title = {{Datashader}: Accurately Render Even the Largest Data},
   year = {2024},
   url = {https://github.com/holoviz/datashader},
 }
 
 @misc{traitlets,
-  author = {IPython Development Team},
+  author = {{IPython development team}},
   title = {{Traitlets}: A Lightweight {Traits} Like Module},
   year = {2024},
   url = {https://github.com/ipython/traitlets},
@@ -221,7 +221,7 @@ year = {2022}
 }
 
 @misc{ipywidgets,
-  author = {Jupyter widgets community},
+  author = {{Jupyter widgets community},
   title = {ipywidgets: Interactive Widgets for the Jupyter Notebook},
   year = {2015},
   url = {https://github.com/jupyter-widgets/ipywidgets}
