--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -182,7 +182,7 @@ year = {2022}
 }
 
 @misc{datashader,
-  author = {{Anaconda developers and community contributors},
+  author = {{Anaconda developers and community contributors}},
   title = {{Datashader}: Accurately Render Even the Largest Data},
   year = {2024},
   url = {https://github.com/holoviz/datashader},
