Add another missing `}`

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -221,7 +221,7 @@ year = {2022}
 }
 
 @misc{ipywidgets,
-  author = {{Jupyter widgets community},
+  author = {{Jupyter widgets community}},
   title = {ipywidgets: Interactive Widgets for the Jupyter Notebook},
   year = {2015},
   url = {https://github.com/jupyter-widgets/ipywidgets}
