Add URLs and whitespaces to all papers. Fix Okabe Ito reference

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -20,57 +20,61 @@
   pages = {90--95},
   publisher = {IEEE COMPUTER SOC},
   doi = {10.1109/MCSE.2007.55},
-  year = 2007
+  year = {2007},
+  url = {https://doi.org/10.1109/MCSE.2007.55},
 }
 
 @article{dekker2023spatial,
-  title={Spatial and temporal organization of the genome: Current state and future aims of the 4D nucleome project},
-  author={Dekker, Job and Alber, Frank and Aufmkolk, Sarah and Beliveau, Brian J and Bruneau, Benoit G and Belmont, Andrew S and Bintu, Lacramioara and Boettiger, Alistair and Calandrelli, Riccardo and Disteche, Christine M and others},
-  journal={Molecular cell},
-  year={2023},
-  publisher={Elsevier},
-  doi={10.1016/j.molcel.2023.06.018}
+  title = {Spatial and temporal organization of the genome: Current state and future aims of the 4D nucleome project},
+  author = {Dekker, Job and Alber, Frank and Aufmkolk, Sarah and Beliveau, Brian J and Bruneau, Benoit G and Belmont, Andrew S and Bintu, Lacramioara and Boettiger, Alistair and Calandrelli, Riccardo and Disteche, Christine M and others},
+  journal = {Molecular cell},
+  year = {2023},
+  publisher = {Elsevier},
+  doi = {10.1016/j.molcel.2023.06.018},
+  url = {https://doi.org/10.1016/j.molcel.2023.06.018},
 }
 
 @article{kerpedjiev2018higlass,
-  title={HiGlass: web-based visual exploration and analysis of genome interaction maps},
-  author={Kerpedjiev, Peter and Abdennur, Nezar and Lekschas, Fritz and McCallum, Chuck and Dinkla, Kasper and Strobelt, Hendrik and Luber, Jacob M and Ouellette, Scott B and Azhir, Alaleh and Kumar, Nikhil and others},
-  journal={Genome biology},
-  volume={19},
-  pages={1--12},
-  year={2018},
-  publisher={Springer},
-  doi={10.1186/s13059-018-1486-1}
+  title = {HiGlass: web-based visual exploration and analysis of genome interaction maps},
+  author = {Kerpedjiev, Peter and Abdennur, Nezar and Lekschas, Fritz and McCallum, Chuck and Dinkla, Kasper and Strobelt, Hendrik and Luber, Jacob M and Ouellette, Scott B and Azhir, Alaleh and Kumar, Nikhil and others},
+  journal = {Genome biology},
+  volume = {19},
+  pages = {1--12},
+  year = {2018},
+  publisher = {Springer},
+  doi = {10.1186/s13059-018-1486-1},
+  url = {https://doi.org/10.1186/s13059-018-1486-1},
 }
 
 @article{mair2022extricating,
-  title={Extricating human tumour immune alterations from tissue inflammation},
-  author={Mair, Florian and Erickson, Jami R and Frutoso, Marie and Konecny, Andrew J and Greene, Evan and Voillet, Valentin and Maurice, Nicholas J and Rongvaux, Anthony and Dixon, Douglas and Barber, Brittany and others},
-  journal={Nature},
-  volume={605},
-  number={7911},
-  pages={728--735},
-  year={2022},
-  publisher={Nature Publishing Group UK London},
-  doi={10.1038/s41586-022-04718-w}
+  title = {Extricating human tumour immune alterations from tissue inflammation},
+  author = {Mair, Florian and Erickson, Jami R and Frutoso, Marie and Konecny, Andrew J and Greene, Evan and Voillet, Valentin and Maurice, Nicholas J and Rongvaux, Anthony and Dixon, Douglas and Barber, Brittany and others},
+  journal = {Nature},
+  volume = {605},
+  number = {7911},
+  pages = {728--735},
+  year = {2022},
+  publisher = {Nature Publishing Group UK London},
+  doi = {10.1038/s41586-022-04718-w},
+  url = {https://doi.org/10.1038/s41586-022-04718-w},
 }
 
 @article{greene2021new,
-  title={New interpretable machine-learning method for single-cell data reveals correlates of clinical response to cancer immunotherapy},
-  author={Greene, Evan and Finak, Greg and D'Amico, Leonard A and Bhardwaj, Nina and Church, Candice D and Morishima, Chihiro and Ramchurren, Nirasha and Taube, Janis M and Nghiem, Paul T and Cheever, Martin A and others},
-  journal={Patterns},
-  volume={2},
-  number={12},
-  year={2021},
-  publisher={Elsevier},
-  doi={10.1016/j.patter.2021.100372}
+  title = {New interpretable machine-learning method for single-cell data reveals correlates of clinical response to cancer immunotherapy},
+  author = {Greene, Evan and Finak, Greg and D'Amico, Leonard A and Bhardwaj, Nina and Church, Candice D and Morishima, Chihiro and Ramchurren, Nirasha and Taube, Janis M and Nghiem, Paul T and Cheever, Martin A and others},
+  journal = {Patterns},
+  volume = {2},
+  number = {12},
+  year = {2021},
+  publisher = {Elsevier},
+  doi = {10.1016/j.patter.2021.100372},
+  url = {https://doi.org/10.1016/j.patter.2021.100372},
 }
 
 @software{greene2022data,
 author = {Greene, Evan and Finak, Greg and Lekschas, Fritz and Smith, Malisa and D'Amico, Leonard A and Bhardwaj, Nina and Church, Candice D and Morishima, Chihiro and Ramchurren, Nirasha and Taube, Janis M and Nghiem, Paul T and Cheever, Martin A and Fling, Steven P and Gottardo, Raphael},
 doi = {10.5281/zenodo.7522322},
 license = {Apache-2.0},
-month = jul,
 title = {{Data Transformations for Effective Visualization of Single-Cell Embeddings}},
 url = {https://github.com/flekschas-ozette/ismb-biovis-2022},
 version = {1.0.0},
@@ -78,22 +82,25 @@ year = {2022}
 }
 
 @article{spracklin2023diverse,
-  title={Diverse silent chromatin states modulate genome compartmentalization and loop extrusion barriers},
-  author={Spracklin, George and Abdennur, Nezar and Imakaev, Maxim and Chowdhury, Neil and Pradhan, Sriharsa and Mirny, Leonid A and Dekker, Job},
-  journal={Nature structural \& molecular biology},
-  volume={30},
-  number={1},
-  pages={38--51},
-  year={2023},
-  publisher={Nature Publishing Group US New York},
-  doi={10.1038/s41594-022-00892-7}
+  title = {Diverse silent chromatin states modulate genome compartmentalization and loop extrusion barriers},
+  author = {Spracklin, George and Abdennur, Nezar and Imakaev, Maxim and Chowdhury, Neil and Pradhan, Sriharsa and Mirny, Leonid A and Dekker, Job},
+  journal = {Nature structural \& molecular biology},
+  volume = {30},
+  number = {1},
+  pages = {38--51},
+  year = {2023},
+  publisher = {Nature Publishing Group US New York},
+  doi = {10.1038/s41594-022-00892-7},
+  url = {https://doi.org/10.1038/s41594-022-00892-7},
 }
 
 @article{misra2022news,
-  title={News category dataset},
-  author={Misra, Rishabh},
-  journal={arXiv preprint arXiv:2209.11429},
-  year={2022}
+  title = {News category dataset},
+  author = {Misra, Rishabh},
+  publisher = {arXiv},
+  year = {2022},
+  doi = {10.48550/arXiv.2209.11429},
+  url = {https://arxiv.org/abs/2209.11429},
 }
 
 @InProceedings{mckinney2010data,
@@ -102,8 +109,8 @@ year = {2022}
   booktitle = {{P}roceedings of the 9th {P}ython in {S}cience {C}onference},
   pages = {56--61},
   year = {2010},
-  editor = {{S}t\'efan van der {W}alt and {J}arrod {M}illman},
-  doi = {10.25080/Majora-92bf1922-00a}
+  doi = {10.25080/Majora-92bf1922-00a},
+  url = {https://doi.org/10.25080/Majora-92bf1922-00a},
 }
 
 @article{waskom2021seaborn,
@@ -119,16 +126,16 @@ year = {2022}
   journal = {Journal of Open Source Software}
 }
 
-@article{okabe2008color,
-  title={Color universal design (cud)-how to make figures and presentations that are friendly to colorblind people},
-  author={Okabe, Masataka and Ito, Kei},
-  journal={Retrieved April},
-  volume={21},
-  pages={2017},
-  year={2008}
+@online{okabe2002color,
+  title = {How to make figures and presentations that are friendly to color blind people},
+  author = {Okabe, Masataka and Ito, Kei},
+  journal = {University of Tokyo},
+  year = {2002},
+  url = {https://jfly.uni-koeln.de/color/},
+  urldate = {2024-05-20},
 }
 
-@misc{leland2018umap,
+@article{leland2018umap,
   author = {McInnes, Leland and Healy, John and Melville, James},
   title = {UMAP: Uniform Manifold Approximation and Projection for Dimension Reduction},
   publisher = {arXiv},
@@ -148,7 +155,7 @@ year = {2022}
   url = {http://jmlr.org/papers/v9/vandermaaten08a.html}
 }
 
-@misc{kingma2013auto,
+@article{kingma2013auto,
   author = {Kingma, Diederik P and Welling, Max},
   title = {Auto-Encoding Variational {B}ayes},
   publisher = {arXiv},
@@ -167,16 +174,17 @@ year = {2022}
   year  = {1901},
   publisher = {Taylor & Francis},
   doi = {10.1080/14786440109462720},
+  url = {https://doi.org/10.1080/14786440109462720},
 }
 
-@online{xiao2017fashion,
+@article{xiao2017fashion,
   author = {Han Xiao and Kashif Rasul and Roland Vollgraf},
   title = {{Fashion-MNIST}: a Novel Image Dataset for Benchmarking Machine Learning Algorithms},
   date = {2017-08-28},
   year = {2017},
-  eprintclass = {cs.LG},
-  eprinttype = {arXiv},
-  eprint = {cs.LG/1708.07747},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.1708.07747},
+  url = {https://arxiv.org/abs/1708.07747},
 }
 
 @misc{bokeh,
@@ -238,7 +246,6 @@ year = {2022}
   title = {A General Framework for Comparing Embedding Visualizations Across Class-Label Hierarchies},
   url = {https://osf.io/puxnf},
   doi = {10.31219/osf.io/puxnf},
-  eprint = {https://osf.io/puxnf/download/},
   publisher = {OSF Preprints},
   author = {Manz, Trevor and Lekschas, Fritz and Greene, Evan and Finak, Greg and Gehlenborg, Nils},
   year = {2024},
