--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "a22bba6f-8c9f-46db-9427-3e5264b969a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jscatter\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "13bbba83-033b-4b9a-9bfa-08ef4eabf22d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "108f6ee1f04c45208b335d9723ecfb78",
+       "model_id": "5c0e986601a44c4cbf2b9c0b6301b7f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -17,15 +28,12 @@
        "HBox(children=(VBox(children=(Button(button_style='primary', icon='arrows', layout=Layout(width='36px'), style…"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import jscatter\n",
-    "import numpy as np\n",
-    "\n",
     "x = np.random.rand(500)\n",
     "y = np.random.rand(500)\n",
     "\n",
@@ -196,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
