Askar's directional button first working implementation

--- a/js/Untitled.ipynb
+++ b/js/Untitled.ipynb
@@ -30,14 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "94a44328-e9d9-4d23-9de8-0675159e136b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85d59a3e5acb42c2aa45622bcc82ef13",
+       "model_id": "2a646e36ade645bfb741191ffb4baaaf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,7 +47,7 @@
        "HBox(children=(VBox(children=(Button(button_style='primary', icon='arrows', layout=Layout(width='36px'), style…"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,23 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "653b8122-0ed6-4368-bb3e-4300541c8532",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p.children[1].children[0].dir_center_positions"
    ]
@@ -98,6 +89,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ae030175-4862-42ce-a9dd-0abac1362ffd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cff4f3fb-bc6c-4f36-b0a1-5171a9adf637",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -119,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
