fix: ensure script works with deployed wheel

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -112,8 +112,10 @@
     "\n",
     "Since Jupyter Scatter builds upon Traitlets, you can easily integrate it with other Jupyter Widgets by observing changes.\n",
     "\n",
-    "For instance, the following example shows a [UMAP](https://umap-learn.readthedocs.io/en/latest/) embedding of the [Fashion\n",
-    "MNIST](https://github.com/zalandoresearch/fashion-mnist) dataset where points represent images and the point selection is linked to an image widget that displays the selected images."
+    "For instance, the following example shows how we can link a [UMAP](https://umap-learn.readthedocs.io/en/latest/) embedding scatterplot of the [Fashion\n",
+    "MNIST](https://github.com/zalandoresearch/fashion-mnist) dataset where points represent images to an widget showing the actual images of selected point.\n",
+    "\n",
+    "First we're going to create a `Scatter` instance as before."
    ]
   },
   {
@@ -122,13 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ipywidgets\n",
     "import jscatter\n",
-    "\n",
-    "from utils import ImagesWidget\n",
-    "\n",
-    "# A custom image widget for displaying Fashion MNIST images\n",
-    "images = ImagesWidget()\n",
     "\n",
     "fashion_mnist = pd.read_parquet(\n",
     "    'https://paper.jupyter-scatter.dev/fashion-mnist-embeddings.pq'\n",
@@ -142,7 +138,103 @@
     "    background_color='black',\n",
     "    axes=False,\n",
     "    height=480\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we're creating a widget for displaying images in a grid. Don't worry about the details of this image widget here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import anywidget\n",
+    "import traitlets\n",
+    "import traittypes\n",
+    "\n",
+    "class ImagesWidget(anywidget.AnyWidget):\n",
+    "    _esm = \"\"\"\n",
+    "    const baseUrl = 'https://paper.jupyter-scatter.dev/fashion-mnist-images/';\n",
+    "    \n",
+    "    function render({ model, el }) {\n",
+    "      const container = document.createElement('div');\n",
+    "      container.classList.add('images-container');\n",
+    "      el.appendChild(container);\n",
+    "\n",
+    "      const grid = document.createElement('div');\n",
+    "      grid.classList.add('images-grid');\n",
+    "      container.appendChild(grid);\n",
+    "\n",
+    "      function renderImages() {\n",
+    "        grid.textContent = '';\n",
+    "        \n",
+    "        model.get('images').forEach((image) => {\n",
+    "          const imgId = String(image).padStart(5, '0');\n",
+    "        \n",
+    "          const img = document.createElement('div');\n",
+    "          img.classList.add('images-fashion-mnist');\n",
+    "          img.style.backgroundImage = `url(${baseUrl}${imgId}.png)`;\n",
+    "        \n",
+    "          grid.appendChild(img);\n",
+    "        });\n",
+    "      }\n",
+    "\n",
+    "      model.on(\"change:images\", renderImages);\n",
+    "      \n",
+    "      renderImages();\n",
+    "    }\n",
+    "\n",
+    "    export default { render };\n",
+    "    \"\"\"\n",
+    "\n",
+    "    _css = \"\"\"\n",
+    "    .images-container {\n",
+    "      position: absolute;\n",
+    "      inset: 0;\n",
+    "      overflow: auto;\n",
+    "      background: black;\n",
+    "    }\n",
+    "    \n",
+    "    .images-grid {\n",
+    "      display: grid;\n",
+    "      grid-template-columns: repeat(auto-fit, minmax(32px, 1fr));\n",
+    "      align-content: flex-start;\n",
+    "      gap: 8px;\n",
+    "    }\n",
+    "    \n",
+    "    .images-fashion-mnist {\n",
+    "      width: 32px;\n",
+    "      height: 32px;\n",
+    "      background-repeat: no-repeat;\n",
+    "      background-position: center;\n",
+    "    }\n",
+    "    \"\"\"\n",
+    "\n",
+    "    images = traittypes.Array(default_value=[]).tag(sync=True)\n",
+    "\n",
+    "images = ImagesWidget()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally, to link the point selection of our scatter to the image widget, all we have to do is to observe the scatter widget's `selection` property for changes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets\n",
     "\n",
     "def selection_change_handler(change):\n",
     "    images.images = change['new']\n",
